<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".PlateCount">

    <TextView
        android:id="@+id/barbell_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/barbell_weight"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/soft_white"
        app:layout_constraintBottom_toTopOf="@+id/totalWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/totalWeight"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <RadioButton
            android:id="@+id/radio35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_35lbs"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_45lbs"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/platesNeeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plates_needed"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/_35plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_35_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_45plates"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/_15plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_25plates"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/_25PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10rm"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@id/_25plates"
        app:layout_constraintTop_toBottomOf="@id/_35PlateCount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_15PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10rm"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@id/_15plates"
        app:layout_constraintTop_toBottomOf="@id/_25PlateCount"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/_45PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10rm"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toEndOf="@id/_45plates"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/_25plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_35plates"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_45plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_45_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/_35PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10rm"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@id/_35plates"
        app:layout_constraintTop_toBottomOf="@id/_45PlateCount"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/_10plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/_5plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_10plates"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_halfPlates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_half_lbs"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_5plates"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_1Plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_lb"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_halfPlates"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_10PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/_10rm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toEndOf="@id/_10plates"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/_5PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10rm"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@id/_5plates"
        app:layout_constraintTop_toBottomOf="@id/_10PlateCount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_halfPlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/_10rm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@id/_halfPlates"
        app:layout_constraintTop_toBottomOf="@id/_5PlateCount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_1PlateCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/_10rm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@id/_1Plates"
        app:layout_constraintTop_toBottomOf="@id/_halfPlateCount"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/barbell"
        android:layout_width="95dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/barbell_svgrepo_com" />

    <ImageView
        android:id="@+id/percentSign"
        android:layout_width="65dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/baseline_percent_24" />

    <ImageView
        android:id="@+id/plates"
        android:layout_width="58dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/bar_chart_graph_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>